logs/Slang/generated/hdlconv/hdlconvertor_p530.sv.log
name: hdlconvertor_p530
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p530.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p530.sv:1:1: error: language feature not yet supported
class SimpleSum;
^~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p530.sv:5:27: error: use of undeclared identifier 'SimpleSum'
task InlineConstraintDemo(SimpleSum p);
                          ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p530.sv:7:25: error: language feature not yet supported
success = p.randomize() with {x < y;};
                        ^~~~~~~~~~~~~
